--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
-		"@iconify/svelte": "^3.1.4",
 		"@iconify/icons-fluent": "^1.2.38",
+		"@iconify/svelte": "^3.1.4",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.20.4",
 		"@tailwindcss/forms": "^0.5.6",
 		"@types/cookie": "^0.5.1",
@@ -38,6 +39,5 @@
 		"vitest": "^0.34.0"
 	},
 	"type": "module",
-	"dependencies": {
-	}
+	"dependencies": {}
 }
